- spacing fixed

--- a/src/components/registry.scss
+++ b/src/components/registry.scss
@@ -38,6 +38,10 @@
     max-width: 1280px !important;
 }
 
+.mb-3 {
+    margin-bottom: 0 !important;
+}
+
 @media only screen and (max-width: 550px) {
     .r-section { 
         font-weight: 100;
@@ -46,9 +50,11 @@
     .m-pd-0 {
         padding: 0px !important;
     }
-
     .partner-block {
         padding: 10px;
+    }
+    .mb-3 {
+        margin-bottom: 1rem!important;
     }
 }
 
